@@ -74,6 +74,8 @@ allprojects {
         compile group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
         compile group: 'commons-io', name: 'commons-io', version: '2.5'
         compile 'io.netty:netty-all:4.0.36.Final'
+        // https://mvnrepository.com/artifact/io.zipkin.reporter/zipkin-sender-okhttp3
+        compile group: 'io.zipkin.reporter', name: 'zipkin-sender-okhttp3', version: '0.6.12'
 
         testCompile "org.mockito:mockito-core:2.+"
     }
@@ -259,9 +261,11 @@ project('service:server') {
 
 project('service:server:host') {
     apply plugin: 'application'
+    applicationDefaultJvmArgs = ["-server", "-Xms1g", "-Xmx1g", "-XX:+HeapDumpOnOutOfMemoryError",
+                                 "-Xloggc:/tmp/logs/gc.log", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps"]
     mainClassName = "com.emc.pravega.service.server.host.ServiceStarter"
 
-    applicationDefaultJvmArgs = ["-server", "-Xms512m", "-XX:+HeapDumpOnOutOfMemoryError"]
+    //applicationDefaultJvmArgs = ["-server", "-Xms512m", "-XX:+HeapDumpOnOutOfMemoryError"]
 
     dependencies {
         compile project(':common')
@@ -293,6 +297,9 @@ project('service:server:host') {
 }
 
 project('integrationtests') {
+    apply plugin: 'application'
+    mainClassName = "com.emc.pravega.demo.TurbineHeatSensor"
+
     dependencies {
         compile project(':common')
         compile project(':clients:streaming')
@@ -305,6 +312,9 @@ project('integrationtests') {
         compile files(project(':clients:streaming').sourceSets.test.output)
         testCompile files(project(':service:server').sourceSets.test.output)
         testCompile files(project(':service:server:host').sourceSets.test.output)
+        // https://mvnrepository.com/artifact/commons-cli/commons-cli
+        compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
+
     }
 
     task startServer(type: JavaExec) {
@@ -414,6 +424,13 @@ project('controller:server') {
     }
 
     dependencies {
+      compile('com.twitter:distributedlog-core:0.3.51-RC1') {
+            exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        }
+        compile('com.twitter:distributedlog-client:0.3.51-RC1') {
+            exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        }
+
         compile project(':common')
         compile project(":controller:contract")
         compile project(":clients:streaming")
